--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "next lint",
     "compile": "npx tailwindcss -i ./src/main.css -o ./app/globals.css --watch --minify"
@@ -15,7 +15,8 @@
     "eslint-config-next": "^13.1.1",
     "next": "^13.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sharp": "^0.31.3"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
