--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "npx purgecss --config purgecss.config.js -o ./assets/uicons-regular-rounded/css/uicons-regular-rounded.min.css && next build && next export",
     "start": "next start",
     "lint": "next lint",
     "compile": "npx tailwindcss -i ./src/main.css -o ./styles/globals.css --watch --minify"
@@ -24,6 +24,7 @@
     "postcss": "^8.4.20",
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.2",
+    "purgecss": "^5.0.0",
     "tailwindcss": "^3.2.4"
   }
 }
