--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@next/font": "^13.0.6",
     "eslint": "8.29.0",
     "eslint-config-next": "^13.1.1",
+    "framer-motion": "^10.12.16",
+    "lucide-react": "^0.224.0",
     "next": "^13.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
