--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npx purgecss --config purgecss.config.js -o ./assets/uicons-regular-rounded/css/uicons-regular-rounded.min.css && next build && next export",
+    "build": "npx purgecss --config purgecss.config.js -o ./assets/uicons-regular-rounded/css/uicons-regular-rounded.min.css && npx tailwindcss -i ./src/main.css -o ./styles/globals.css && next build && next export",
     "buildIcons": "npx purgecss --config purgecss.config.js -o ./assets/uicons-regular-rounded/css/uicons-regular-rounded.min.css",
     "start": "next start",
     "lint": "next lint",
