chore: design improvement

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,7 +6,8 @@
                 "components/*"
             ],
             "@assets/*": [
-                "assets/*"
+                "assets/*",
+                "public/*"
             ],
             "@styles/*": [
                 "styles/*"
