--- a/package.json
+++ b/package.json
@@ -4,19 +4,18 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npx purgecss --config purgecss.config.js -o ./assets/uicons-regular-rounded/css/uicons-regular-rounded.min.css && npx tailwindcss -i ./src/main.css -o ./styles/globals.css --minify && next build && next export",
+    "build": "npx purgecss --config purgecss.config.js -o ./assets/uicons-regular-rounded/css/uicons-regular-rounded.min.css && npx tailwindcss -i ./src/main.css -o ./styles/globals.css --minify && next build",
     "buildIcons": "npx purgecss --config purgecss.config.js -o ./assets/uicons-regular-rounded/css/uicons-regular-rounded.min.css",
     "start": "next start",
     "lint": "next lint",
     "compile": "npx tailwindcss -i ./src/main.css -o ./styles/globals.css --watch --minify"
   },
   "dependencies": {
-    "@next/font": "^13.0.6",
     "eslint": "8.29.0",
-    "eslint-config-next": "^13.1.1",
+    "eslint-config-next": "^13.4.6",
     "framer-motion": "^10.12.16",
     "lucide-react": "^0.224.0",
-    "next": "^13.1.1",
+    "next": "^13.4.6",
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
