--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint": "8.29.0",
     "eslint-config-next": "^13.4.6",
     "framer-motion": "^10.12.16",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.224.0",
     "next": "^13.4.6",
     "next-pwa": "^5.6.0",
