--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sharp": "^0.31.3"
+    "sharp": "^0.31.3",
+    "swr": "^2.2.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
