chore(docs): updated terms and conditions

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -17,6 +17,9 @@
             ],
             "@helpers/*": [
                 "helpers/*"
+            ],
+            "@store/*": [
+                "store/*"
             ]
         }
     }
