--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^18.2.0",
     "sharp": "^0.31.3",
     "swr": "^2.2.0",
-    "zustand": "^4.3.9"
+    "zustand": "^4.3.9",
+    "creditcardutils": "^1.0.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
